Fix readmore fadeout overlapping popout player

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -611,7 +611,6 @@ a.podcast-site-link {
         content: '';
         position: absolute;
         background: linear-gradient(0deg, white, transparent);
-        z-index: 9999;
         left: 0;
         width: 100%;
         height: 10em;
